# stargazing-suitability-ksa

./: .gitignore  README.md  main.py  pyproject.toml
params/: grid.yaml
scripts/: 01_define_aoi.py  02_define_grid.py  03_acquire_dem.py  04_acquire_viirs.py  _check_gee.py
src/: reusable_functions.py
