[project]
name = "stargazing-ksa"
version = "0.1.0"
description = "Unsupervised geospatial ML pipeline producing a 1 km stargazing suitability raster and ranked candidate sites for Saudi Arabia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "duckdb>=1.5.3",
    "earthengine-api>=1.7.26",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "matplotlib>=3.10.9",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.8.0",
    "xarray>=2026.4.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
